test/compile_fail/retired_rowspec_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.RowSpec;
}
